Fix bug where some long words may overflow the Project Activity area
Issue #57

--- a/src/includes/admin/assets/css/upstream.css
+++ b/src/includes/admin/assets/css/upstream.css
@@ -194,6 +194,7 @@
   font-size: 12px;
   margin: 0 0 10px;
   padding: 0 0 10px;
+  word-wrap: break-word;
 }
 .upstream .activity-item .item {
   display: block;
